# CrystalMenu

./: CMakeLists.txt  Clickbot.cpp  DevTools.cpp  HitboxScaler.cpp  MyMod.hpp  Noclip.cpp  ReplayBot.cpp  UI.cpp  build.yml  main.cpp  mod.json
.github/workflows/: build.yml
